--- a/info.yaml
+++ b/info.yaml
@@ -16,24 +16,24 @@ project:
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "reset button"
+  ui[1]: "1 lever"
+  ui[2]: "2 lever"
+  ui[3]: "3 lever"
+  ui[4]: "4 lever"
+  ui[5]: "5 lever"
+  ui[6]: "6 lever"
+  ui[7]: "7 lever"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "and inverter"
+  uo[1]: "and and or"
+  uo[2]: "and and or"
+  uo[3]: "and and or"
+  uo[4]: "and and or"
+  uo[5]: "and and or"
+  uo[6]: "and and or"
+  uo[7]: "and and xor"
 
   # Bidirectional pins
   uio[0]: ""
